2006-05-01  Joshua Sled  <jsled@asynchronous.org>

	* src/register/register-gnome/pricecell-gnome.c
	(gnc_price_cell_direct_update): null-terminate strings we traffic
	in, leading to less crashes! :( Bug#340358.

2006-04-30  David Hampton  <hampton@employees.org>

	* src/gnome/reconcile-list.c: Patch from Mike Alexander to fix the
	cleared split date threshold in the reconcile window. Fixes
	#340235.

2006-05-01  Andreas Köhler  <andi5.py@gmx.net>

	* src/gnome-utils/gnc-html-graph-gog.c: Add legend only to
	  barchart and piechart plots, not to scatter plots, as there is
	  currently no usage for it. Fix #337769.

2006-04-30  Joshua Sled  <jsled@asynchronous.org>

	Bug#340197: reverse account opening balances when desired.
	* src/gnome/druid-hierarchy.c (balance_cell_data_func): Don't
	invert balances here.  Leads to strange behavior.
	* src/gnome/druid-hierarchy.c (starting_balance_helper): Reverse
	balance if needed by the account.

2006-04-30  Christian Stimming  <stimming@tuhh.de>

	* src/app-utils/gnc-ui-util.c: Fix retrieval of reconcile
	abbreviation if the translators erroneously did not use the same
	string length as the english string. Bug #339722.

2006-04-29  David Hampton  <hampton@employees.org>

	* src/engine/gnc-lot.c:
	* src/engine/cap-gains.[ch]: Patch from Mike Alexander's to handle
	multiple lot dispositions on the same day.  Needed since the
	transaction sorting code may sort gains splits after other splits
	on the same day. Add a new function to find the source split
	associated with a capital gains split.  Also use lot_amount and
	lot_value consistently instead of opening_amount and
	opening_value.

	* src/business/business-gnome/dialog-billterms.c:
	* src/business/business-gnome/glade/billterms.glade: Eliminate
	some gtk warning messages. Stop the contents of the Bill Terms
	dialog from shifting around when the first/last term is
	created/destroyed.

2006-04-30  Andreas Köhler  <andi5.py@gmx.net>

	* configure.in: